# pprint36

./: .bumpversion.cfg  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  __pkginfo__.py  formate.toml  lint_roller.sh  puller-requirements.txt  puller.py  pyproject.toml  repo_helper.yml  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  octocheese.yml  python_ci_linux.yml
doc-source/: Source.rst  conf.py  contributing.rst  index.rst
doc-source/api/: pprint-36.rst
pprint36/: __init__.py
pprint_36/: __init__.py
tests/: _test_set.py  test_pprint.py
